k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: travelion-sailing-service
  labels:
    app: travelion-sailing-service
    version: "v1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelion-sailing-service
  template:
    metadata:
      labels:
        app: travelion-sailing-service
        version: "v1.0.0"
      annotations:
        field.cattle.io/workloadMetrics: '[{"path":"/actuator/prometheus","port":8080,"schema":"HTTP"}]'
    spec:
      containers:
        - name: travelion-sailing-service
          image: travelion-sailing-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512M
              cpu: "500m"
            limits:
              memory: 512M
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: "/actuator/info"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15
